Project mindex_staging {
  database_type: 'PostgreSQL'
  Note: '''
    비동기 OCR·LLM 추출 큐 + 임시 결과 보관용 DB.
    운영 DB(mindex_remastered.dbml)와는 물리적으로 분리된 별도 인스턴스이며
    메인 DB에 대한 FK는 없다.

    OCR·LLM 추출은 계약서 한 건에 50~60초가 걸려 요청 안에서 끝낼 수 없다.
    추출은 P1이 맡는 쿠버네티스 워커 파드가 이 DB의 extract_job 테이블을
    큐 삼아 폴링(SKIP LOCKED)해서 뒤에서 처리하고, 화면은 상태를 폴링해서
    결과를 받는다. 메시지 브로커는 쓰지 않는다.

    확정(save_rights_batch())이 끝나면 운영 DB의 contract.source_tmpid에
    이 DB의 tmpid가 논리적으로 기록되고, 이 DB 쪽 행은 TTL 7일 배치가
    정리한다. 전체 흐름은 docs/mindex-임시DB-비동기파이프라인.html 참고.

    이전 pdf_cache.dbml(5테이블, 동기 처리 전제)을 대체한다. 세부 필드를
    정규화 테이블로 쪼개지 않고 extract_result.payload 하나(jsonb)로 둔다 —
    확정 전 검토용이며, 확정된 값만 운영 DB rights_grant로 넘어간다.
  '''
}

Table pdf_blob {
  tmpid      UUID [pk, default: `gen_random_uuid()`]
  data       BYTEA [not null, note: '암호화된 PDF 바이트 원본']
  filename   TEXT
  byte_size  INT
  created_at TIMESTAMPTZ [not null, default: `now()`]

  Note: '업로드된 PDF 원본. 확정(⑧) 후 정리(⑨)에서 이 행을 지우면 CASCADE로 extract_job·extract_result가 함께 사라진다.'
}

Table extract_job {
  tmpid       UUID [pk, ref: - pdf_blob.tmpid, note: 'ON DELETE CASCADE']
  status      TEXT [not null, default: 'QUEUED', note: 'QUEUED | RUNNING | DONE | FAILED']
  stage       TEXT [note: 'OCR | LLM — 화면 진행 표시용']
  lease_until TIMESTAMPTZ [note: 'RUNNING 점유 만료 시각. 지나면 다른 워커가 자동 회수']
  attempts    INT [not null, default: 0]
  reason      TEXT [note: 'FAILED 사유']
  consumed_at TIMESTAMPTZ [note: '운영 DB 확정이 끝난 시각. 별도 DB라서 필요한 컬럼 — 확정과 임시 정리를 한 트랜잭션으로 못 묶어서 생겼다']
  created_at  TIMESTAMPTZ [not null, default: `now()`]

  Indexes {
    (status, created_at)
  }

  Note: '큐이자 상태 테이블. 워커가 FOR UPDATE SKIP LOCKED로 QUEUED 한 건을 집어간다.'
}

Table extract_result {
  tmpid      UUID [pk, ref: - extract_job.tmpid, note: 'ON DELETE CASCADE']
  payload    JSONB [not null, note: 'AI 추출 결과 원본. status=DONE과 한 트랜잭션으로 커밋']
  confidence NUMERIC(4,3)
  created_at TIMESTAMPTZ [not null, default: `now()`]

  Note: '화면은 이 payload를 읽어 보여주고, 사용자가 고친 값은 여기 다시 쓰지 않는다 — 확정 전 값은 화면이 들고 있다가 확정 시점에 한 번에 넘긴다.'
}
